package no.itszipzon;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

/**
 * The main method to run the springboot application.
 */
@SpringBootApplication
public class Main {

  /**
   * Main method to run the springboot application.
   *
   * @param args the arguments
   */
  public static void main(String[] args) {
    SpringApplication.run(Main.class, args);
  }

}
